# correct-hours

./: .gitignore  README.md  hellow.py  main.py  mapping.py  pyproject.toml  requirements.txt  workbook_processor.py
correct_hours/: __main__.py  types.py
correct_hours/report_processors/: myob.py  types.py
correct_hours/report_processors/xero/: __init__.py  rate_processor.py
examples/myob/: report.xlsx
examples/xero/: barney-stinson.xlsx  daily.xlsx  rates.xlsx  senior-team-leader.xlsx  team-leader.xlsx  traffic-controller.xlsx
src/correct_hours/: workbook_processor.py
tests/: test_workbook_processor.py
tests/data/: rates.xlsx  timesheet-david.xlsx  xero-report.xlsx
tests/report_processors/: test_xero.py
tests/report_processors/xero/: test_rates_processor.py  test_xero.py
