[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "correct_hours"
version = "0.0.1"
authors = [
  { name="Jose Orozco", email="gabow800@gmail.com" },
]
description = "Script that correct timesheets"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gabow800/correct-hours"
"Bug Tracker" = "https://github.com/gabow800/correct-hours/issues"